--- a/b-cal.dev.css
+++ b/b-cal.dev.css
@@ -1,21 +1,15 @@
-/**
- * @author      Shushik <silkleopard@yandex.ru>
- * @version     1.0 (dev)
- * @description b-cal — a simple JavaScript/CSS calendar
- */
-
-
-/* Main block (begin) */
 .b-cal
 {
-    font-family: Verdana, Helvetica, sans-serif;
+    font-family: Verdana, sans-serif;
     font-size:   10px;
 
     display:  none;
     position: absolute;
     z-index:  3;
 
-    padding: 3px;
+    width:      154px;
+    padding:    3px;
+    margin-top: 7px;
 
     background: #424242;
     color:      #FFF;
@@ -34,216 +28,8 @@
 {
     display: block;
 }
-/* Main block (end) */
 
 
-/* Calendar`s tail background (begin) */
-.b-cal__tail-in
-{
-    font-size: 0;
-
-    line-height: 0;
-
-    position: absolute;
-    top:      110px;
-    left:     -14px;
-
-    width:  0;
-    height: 0;
-
-    border:             transparent solid 7px;
-    border-right-color: #424242;
-}
-/* Calendar`s tail background (end) */
-
-
-/* Calendar`s tail border (begin) */
-.b-cal__tail-out
-{
-    font-size: 0;
-
-    line-height: 0;
-
-    position: absolute;
-    top:      110px;
-    left:     -15px;
-
-    width:  0;
-    height: 0;
-
-    border:             transparent solid 7px;
-    border-right-color: #5B5F62;
-}
-/* Calendar`s tail border (end) */
-
-
-/* «Hide calendar» pseudo link (begin) */
-.b-cal__hide
-{
-    text-align: center;
-
-    cursor: pointer;
-
-    padding:    2px 0 1px 0;
-    margin-top: 2px;
-
-    color:      #BABABA;
-    border-top: #5B5F62 solid 1px;
-}
-
-.b-cal__hide:hover
-{
-    color: #FFF;
-}
-/* «Hide calendar» pseudo link (end) */
-
-
-/* «Next month» arrow (begin) */
-.b-cal__next
-{
-    font-size: 0;
-
-    line-height: 0;
-
-    width:  0;
-    height: 0;
-
-    cursor:   pointer;
-    position: absolute;
-    top:      7px;
-    right:    5px;
-
-    border:            transparent solid 5px;
-    border-left-color: #BABABA;
-}
-
-.b-cal__next:hover
-{
-    border-left-color: #FFF;
-}
-
-.b-cal__next_is_disabled
-{
-    cursor: default;
-}
-
-.b-cal__next_is_disabled,
-body .b-cal__next_is_disabled:hover
-{
-    border-left-color: #5B5F62;
-}
-/* «Next month» arrow (end) */
-
-
-/* «Previous month» arrow (begin) */
-.b-cal__prev
-{
-    font-size: 0;
-
-    line-height: 0;
-
-    width:  0;
-    height: 0;
-
-    cursor:   pointer;
-    position: absolute;
-    top:      7px;
-    left:     5px;
-
-    border:             transparent solid 5px;
-    border-right-color: #BABABA;
-}
-
-.b-cal__prev:hover
-{
-    border-right-color: #FFF;
-}
-
-.b-cal__prev_is_disabled
-{
-    cursor: default;
-}
-
-.b-cal__prev_is_disabled,
-body .b-cal__prev_is_disabled:hover
-{
-    border-right-color: #5B5F62;
-}
-/* «Previous month» arrow (end) */
-
-
-/* Month name holder (begin) */
-.b-cal__month
-{
-    text-align: center;
-
-    padding: 2px 0 0 0;
-}
-/* Month name holder (end) */
-
-
-/* Weekdays holder (begin) */
-.b-cal__weekdays:after
-{
-    content: '';
-    display: block;
-    clear:   both;
-}
-
-* html .b-cal__weekdays,
-* html .b-cal__weekdays
-{
-    height: 1%;
-}
-/* Weekdays holder (end) */
-
-
-/* Weekday (begin) */
-.b-cal__weekday
-{
-    font-size: 8px;
-
-    text-align:  center;
-    line-height: 14px;
-
-    float:  left;
-
-    width:   20px;
-    padding: 2px 0;
-
-    border: transparent solid 1px;
-
-    color: #A8A779;
-}
-/* Weekday (end) */
-
-
-/* Days holder (begin) */
-.b-cal__days
-{
-    width:       154px;
-    padding-top: 5px;
-    margin-top:  2px;
-
-    border-top: #5B5F62 solid 1px;
-}
-
-.b-cal__days:after
-{
-    content: '';
-    display: block;
-    clear:   both;
-}
-
-* html .b-cal__days,
-* html .b-cal__days
-{
-    height: 1%;
-}
-/* Days holder (end) */
-
-
-/* Day (begin) */
 .b-cal__day
 {
     text-align: center;
@@ -302,6 +88,19 @@ body .b-cal__day_is_chosen:hover
     border-color: #FBF9B6;
 }
 
+body .b-cal__day_is_tangled,
+body .b-cal .b-cal__day_is_tangled:hover
+{
+    color:        #FFF;
+    border-color: #D1D0AD;
+}
+
+body .b-cal__day_is_holiday.b-cal__day_is_tangled,
+body .b-cal__day_is_holiday.b-cal__day_is_tangled:hover
+{
+    color: #FBA89A;
+}
+
 .b-cal__day_is_disabled
 {
     cursor: default;
@@ -313,4 +112,195 @@ body .b-cal__day_is_disabled:hover
 {
     border-color: transparent;
 }
-/* Day (end) */
+
+.b-cal__day_is_holiday
+{
+    color: #FBA89A;
+}
+
+.b-cal__days
+{
+    width:       154px;
+    padding-top: 5px;
+    margin-top:  2px;
+
+    border-top: #5B5F62 solid 1px;
+}
+
+* html .b-cal__days
+{
+    zoom: 1;
+}
+
+.b-cal__days:after
+{
+    content: '';
+    display: block;
+    clear:   both;
+}
+
+.h-ie_6 .b-cal__days,
+.h-ie_7 .b-cal__days
+{
+    height: 1%;
+}
+
+.b-cal__hide
+{
+    text-align: center;
+
+    cursor: pointer;
+
+    padding:    2px 0 1px 0;
+    margin-top: 2px;
+
+    color:      #BABABA;
+    border-top: #5B5F62 solid 1px;
+}
+
+.b-cal__hide:hover
+{
+    color: #FFF;
+}
+
+.b-cal__hat
+{
+    text-align: center;
+
+    padding: 2px 0 0 0;
+}
+
+.b-cal__next
+{
+    font-size: 0;
+
+    line-height: 0;
+
+    width:  0;
+    height: 0;
+
+    cursor:   pointer;
+    position: absolute;
+    top:      7px;
+    right:    5px;
+
+    border:            transparent solid 5px;
+    border-left-color: #BABABA;
+}
+
+.b-cal__next:hover
+{
+    border-left-color: #FFF;
+}
+
+.b-cal__next_is_disabled
+{
+    cursor: default;
+}
+
+.b-cal__next_is_disabled,
+body .b-cal__next_is_disabled:hover
+{
+    border-left-color: #5B5F62;
+}
+
+.b-cal__prev
+{
+    font-size: 0;
+
+    line-height: 0;
+
+    width:  0;
+    height: 0;
+
+    cursor:   pointer;
+    position: absolute;
+    top:      7px;
+    left:     5px;
+
+    border:             transparent solid 5px;
+    border-right-color: #BABABA;
+}
+
+.b-cal__prev:hover
+{
+    border-right-color: #FFF;
+}
+
+.b-cal__prev_is_disabled
+{
+    cursor: default;
+}
+
+.b-cal__prev_is_disabled,
+body .b-cal__prev_is_disabled:hover
+{
+    border-right-color: #5B5F62;
+}
+
+.b-cal__tail-in
+{
+    font-size: 0;
+
+    line-height: 0;
+
+    position: absolute;
+    top:      -13px;
+    left:     71px;
+
+    width:  0;
+    height: 0;
+
+    border:             transparent solid 7px;
+    border-bottom-color: #424242;
+}
+
+.b-cal__tail-out
+{
+    font-size: 0;
+
+    line-height: 0;
+
+    position: absolute;
+    top:      -14px;
+    left:     70px;
+
+    width:  0;
+    height: 0;
+
+    border:             transparent solid 7px;
+    border-bottom-color: #5B5F62;
+}
+
+.b-cal__week:after
+{
+    content: '';
+    display: block;
+    clear:   both;
+}
+
+* html .b-cal__week
+{
+    zoom: 1;
+}
+
+.b-cal__weekday
+{
+    font-size: 8px;
+
+    text-align:  center;
+    line-height: 14px;
+
+    float:  left;
+
+    width:   20px;
+    padding: 2px 0;
+
+    border: transparent solid 1px;
+
+    color: #A8A779;
+}
+
+.b-cal__day_in_past.b-cal__day_is_holiday, .b-cal__day_in_future.b-cal__day_is_holiday, .b-cal__day_is_disabled.b-cal__day_is_holiday {
+    color: #A27770;
+}
